force-app/main/default/objects/Case/fields/FAQP_Firearms_Instrutor__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Firearms_Instrutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firearms Instrutor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FAQP_Case</relationshipName>
    <type>Lookup</type>
</CustomField>