force-app/main/default/objects/Case/fields/FAQP_Lightning_Condition__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Lightning_Condition__c</fullName>
    <label>Lightning Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DayTime/Norrmal Lighting</fullName>
            </value>
            <value>
                <fullName>NightTime/Reduced Lighting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>