force-app/main/default/objects/Case/fields/FAQP_Location__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>