force-app/main/default/objects/Case/fields/FAQP_Qualification_attempt__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Qualification_attempt__c</fullName>
    <label>Qualification attempt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>