force-app/main/default/objects/Case/fields/FAQP_Qualified__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Qualified__c</fullName>
    <label>Qualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>