force-app/main/default/objects/Case/fields/FAQP_Qualified_at_90__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Qualified_at_90__c</fullName>
    <label>Qualified at 90%</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>