force-app/main/default/objects/Case/fields/FAQP_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Test_Date__c</fullName>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>