force-app/main/default/objects/Case/fields/FAQP_Witness_Name__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Witness_Name__c</fullName>
    <label>Witness Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>