force-app/main/default/objects/Case/recordTypes/FAQP_Case.recordType-meta.xml
<RecordType>
    <fullName>FAQP_Case</fullName>
    <active>true</active>
    <businessProcess>FAQP Support</businessProcess>
    <label>FAQP Case</label>
</RecordType>